# fpga-3-softcores

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  hx4k_pmod.pcf  sim.gtkw  wb_intercon.yaml
cmake/: riscv.cmake  synthesis_ice40.cmake  wishbone_intercon.cmake
firmware/: bootstrap.cpp  main.cpp  sections.ld  start.s
rtl/: fifo.v  ice_pll.v  rgb_led_wb.v  timer_wb.v  top.v  uart_rx.v  uart_tx.v  uart_wb.v  wb_ram.v
scripts/: makehex.py
sim/: main.cpp
test/: fifo_test.cpp  test_utils.hpp  wb_ram_test.cpp
